DTO Objects added. Started implmenting HATEAOS Restful API #3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.username = admin
 spring.datasource.password =
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+# wylacz dodatkowe pola nullowe w jsonie (w metadanych)
+spring.jackson.default-property-inclusion=NON_NULL
