--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto = create
 
 
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
-#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type=TRACE
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace 
 
 
 spring.datasource.url=jdbc:h2:~/tenants
@@ -18,4 +23,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # wylacz dodatkowe pola nullowe w jsonie (w metadanych)
-spring.jackson.default-property-inclusion=NON_NULL
+spring.jackson.property-inclusion=NON_NULL
